--- a/_config.yml
+++ b/_config.yml
@@ -4,3 +4,5 @@ plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Dawson Haddox
 description: [A short description of your site's purpose]
+# show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
+# google_analytics: [Your Google Analytics tracking ID]
