--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,7 @@
-name: My Site
 remote_theme: pages-themes/minimal@v0.2.0
 plugins:
 - jekyll-remote-theme # add this line to the plugins list if you already have one
 title: Dawson Haddox
-description: [A short description of your site's purpose]
+# description: [A short description of your site's purpose]
 # show_downloads: ["true" or "false" (unquoted) to indicate whether to provide a download URL]
 # google_analytics: [Your Google Analytics tracking ID]
