--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
-title: Dawson Haddoc
+title: Dawson Haddox
 logo: /assets/img/logo.png
-show_downloads: true
-google_analytics:
 theme: jekyll-theme-minimal
-
-# description: Minimal is a theme for GitHub Pages.
-# remote_theme: pages-themes/minimal@v0.2.0
-# plugins:
-# - jekyll-remote-theme # add this line to the plugins list if you already have one
+show_downloads: true
+google_analytics: true
+Twitter: https://x.com/DawsonHaddox
+# cv: 
+# banner: 
