--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Dawson Haddox
-logo: /assets/img/logo2.png
+logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
 show_downloads: true
 google_analytics: true
