Adding Initial Content

--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
 show_downloads: true
 google_analytics: true
-Twitter: https://x.com/DawsonHaddox
-# cv: 
-# banner: 
+twitter: https://x.com/DawsonHaddox
+# cv: /assets/documents/HaddoxCVJuly2024.pdf
+# banner:
