--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Dawson Haddox
 logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
-show_downloads: true
+show_downloads: false
 google_analytics: true
 twitter: https://x.com/DawsonHaddox
 # cv: /assets/documents/HaddoxCVJuly2024.pdf
