--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Dawson Haddox
 logo: /assets/img/logo.png
 theme: jekyll-theme-minimal
 show_downloads: true
-google_analytics: true
+google_analytics: G-F1S9FK6PSF
 twitter: https://x.com/DawsonHaddox
 email: dawson.d.haddox.25@dartmouth.edu
 cv: /assets/documents/HaddoxCVJuly2024.pdf
