--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,6 @@ logo: /assets/img/Logo.png
 theme: jekyll-theme-minimal
 show_downloads: true
 google_analytics: G-F1S9FK6PSF
-twitter: https://x.com/DawsonHaddox
+bluesky: https://x.com/DawsonHaddox
 email: dawson.d.haddox.25@dartmouth.edu
-cv: /assets/documents/DawsonHaddoxCV_November2024.pdf
+cv: /assets/documents/DawsonHaddoxblCV_November2024.pdf
