--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ author:
   avatar           : "profile.png"
   name             : "Dawson Haddox"
   pronouns         : # example: "she/her"  
-  bio              : "Incoming Clinical Psychology Ph.D. Student"
+  bio              : "Clinical Psychology Ph.D. Student"
   # location         : "Tucson, Arizona, USA" # Location of the author
   employer         : "University of Arizona"
   uri              : # URL
