--- a/_config.yml
+++ b/_config.yml
@@ -54,7 +54,7 @@ author:
   stackoverflow    : # User number or user number and name (i.e., use "1" or "1/jeff-atwood")    
 
   # Social media
-  bluesky          : "dawsonhaddox" # Replace this with you Bluesky username
+  bluesky          : "dawsonhaddox.bsky.social" # Replace this with you Bluesky username
   facebook         : # Username
   flickr           : # Username
   foursquare       : # Username
